CB-7103 Add resource based Auth for DH api