@@ -1,17 +1,19 @@
 package com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.response;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
+import com.sequenceiq.authorization.resource.AuthorizationFilterableResponseCollection;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.common.responses.GeneralCollectionV4Response;
 
-public class StackViewV4Responses extends GeneralCollectionV4Response<StackViewV4Response> {
+public class StackViewV4Responses extends GeneralCollectionV4Response<StackViewV4Response>
+    implements AuthorizationFilterableResponseCollection<StackViewV4Response> {
 
     public StackViewV4Responses(Set<StackViewV4Response> responses) {
         super(responses);
     }
 
     public StackViewV4Responses() {
-        super(Collections.emptyList());
+        super(List.of());
     }
 }
